--- a/StewardClient/src/app/pages/navbar-app/pages/user-banning/components/ban-options/ban-options.component.scss
+++ b/StewardClient/src/app/pages/navbar-app/pages/user-banning/components/ban-options/ban-options.component.scss
@@ -1,8 +1,31 @@
-#ban-area-label {
-  padding-right: 10px;
+@import '/src/variables.scss';
+
+mat-card-content {
+  > *:not(:first-child) {
+    display: block;
+    padding-top: 30px;
+  }
+}
+
+.ban-area label {
+  display: block;
 }
 
 .ban-reason {
   display: block;
   width: 100%;
+}
+
+
+.mat-button-toggle-checked {
+  background-color: mat-color($app-primary);
+  color: mat-color($app-primary, default-contrast);
+}
+
+ul {
+  padding: 0;
+  margin: 0;
+  li {
+    list-style: none;
+  }
 }
