date picker layout

--- a/StewardClient/src/app/pages/navbar-app/pages/user-banning/components/duration-picker/duration-picker.component.scss
+++ b/StewardClient/src/app/pages/navbar-app/pages/user-banning/components/duration-picker/duration-picker.component.scss
@@ -1,5 +1,21 @@
+@import '/src/variables.scss';
+
 :host {
   display: flex !important;
   flex-flow: row wrap;
-  align-items: flex-start;
+  align-items: center;
+  > * {
+    margin: 0 5px;
+  }
+}
+
+:host ::ng-deep {
+  .mat-form-field, .mat-form-field-wrapper {
+    padding-bottom: 0;
+  }
+}
+
+.mat-button-toggle-checked {
+  background-color: mat-color($app-primary);
+  color: mat-color($app-primary, default-contrast);
 }
