--- a/StewardClient/src/app/pages/navbar-app/pages/user-banning/components/duration-picker/duration-picker.component.html
+++ b/StewardClient/src/app/pages/navbar-app/pages/user-banning/components/duration-picker/duration-picker.component.html
@@ -1,10 +1,12 @@
-<mat-form-field appearance="fill">
+<mat-form-field class="date-picker" appearance="fill">
   <mat-label>Ban End Date</mat-label>
-  <input matInput [matDatepicker]="dp1" disabled>
-  <mat-datepicker-toggle matSuffix [for]="dp1"></mat-datepicker-toggle>
-  <mat-datepicker #dp1></mat-datepicker>
+  <input matInput [matDatepicker]="datePicker" disabled>
+  <mat-datepicker-toggle matSuffix [for]="datePicker"></mat-datepicker-toggle>
+  <mat-datepicker #datePicker></mat-datepicker>
 </mat-form-field>
 
-<mat-button-toggle-group>
-  <mat-button-toggle *ngFor="let option of options" [value]="option.duration">{{ option.humanized }}</mat-button-toggle>
+<mat-button-toggle-group [(ngModel)]="value" (change)="onDurationChange($event)" [disabled]="isDisabled">
+  <mat-button-toggle *ngFor="let option of options; let i=index" [value]="option.duration" [checked]="i === 0">
+    {{ option.humanized }}
+  </mat-button-toggle>
 </mat-button-toggle-group>
