--- a/StewardClient/src/app/pages/navbar-app/pages/user-banning/pages/opus/opus-banning.component.scss
+++ b/StewardClient/src/app/pages/navbar-app/pages/user-banning/pages/opus/opus-banning.component.scss
@@ -9,3 +9,13 @@
     flex-grow: 1;
   }
 }
+
+.action-container {
+  display: flex;
+  flex-flow: column nowrap;
+  flex-grow: 1;
+  margin: 0;
+  > * {
+    margin: 10px;
+  }
+}
