Ticket App Drawer

--- a/StewardClient/src/app/pages/ticket-app/ticket-app.component.html
+++ b/StewardClient/src/app/pages/ticket-app/ticket-app.component.html
@@ -1,1 +1,14 @@
-<router-outlet></router-outlet>
+<overlay></overlay>
+<mat-drawer-container autosize>
+  <mat-drawer #drawer mode="over" position="end" (closed)="clearSidebar()">
+    <pre>{{ location }}</pre>
+    <router-outlet
+      name="sidebar"
+      (activate)="drawer.open()"
+      (deactivate)="drawer.close()"
+    ></router-outlet>
+  </mat-drawer>
+  <div class="content">
+    <router-outlet></router-outlet>
+  </div>
+</mat-drawer-container>
