Fix scroll bars

--- a/StewardClient/src/app/pages/ticket-app/ticket-app.component.scss
+++ b/StewardClient/src/app/pages/ticket-app/ticket-app.component.scss
@@ -9,6 +9,12 @@
 
 mat-drawer-container {
   flex-grow: 1;
+
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
 }
 
 mat-drawer {
@@ -34,7 +40,7 @@ mat-drawer {
 }
 
 div {
-  padding: 10px;
+  padding: 5px;
 }
 
 .header-buttons {
