--- a/StewardClient/src/app/pages/navbar-app/pages/user-banning/pages/apollo/apollo-banning.component.html
+++ b/StewardClient/src/app/pages/navbar-app/pages/user-banning/pages/apollo/apollo-banning.component.html
@@ -6,7 +6,7 @@
 ></apollo-player-selection>
 
 <div class="action-container">
-  <ban-options></ban-options>
+  <ban-options [ngModel]="banOptions"></ban-options>
 
   <mat-card>
     <mat-card-content>
