--- a/StewardClient/src/app/pages/navbar-app/pages/user-banning/components/ban-options/ban-options.component.html
+++ b/StewardClient/src/app/pages/navbar-app/pages/user-banning/components/ban-options/ban-options.component.html
@@ -1,9 +1,9 @@
-<mat-card>
+<mat-card [formGroup]="formGroup">
   <mat-card-content>
     <section class="ban-area">
       <label>Ban Area</label>
-      <mat-button-toggle-group [(ngModel)]="data.banArea" (ngModelChange)="onChange()">
-        <mat-button-toggle [value]="options.banArea.AllFeatures" checked=true>All Features</mat-button-toggle>
+      <mat-button-toggle-group [formControl]="formControls.banArea">
+        <mat-button-toggle [value]="options.banArea.AllFeatures">All Features</mat-button-toggle>
         <mat-button-toggle [value]="options.banArea.UserGeneratedContent">User Generated Content</mat-button-toggle>
         <mat-button-toggle [value]="options.banArea.Matchmaking">Matchmaking</mat-button-toggle>
       </mat-button-toggle-group>
@@ -11,17 +11,20 @@
 
     <mat-form-field class="ban-reason" appearance="fill">
       <mat-label>Ban Reason</mat-label>
-      <textarea matInput placeholder="ʕ•́ᴥ•̀ʔっ" [(ngModel)]="data.banReason" (ngModelChange)="onChange()"></textarea>
+      <textarea matInput placeholder="ʕ•́ᴥ•̀ʔっ" [formControl]="formControls.banReason"></textarea>
       <mat-hint>This reason will be shown to the player.</mat-hint>
+      <mat-error *ngIf="formControls.banReason.hasError('required')">
+        Missing ban reason
+      </mat-error>
     </mat-form-field>
 
-    <duration-picker [(ngModel)]="data.banDuration" (ngModelChange)="onChange()"></duration-picker>
+    <duration-picker [formControl]="formControls.banDuration"></duration-picker>
 
-    <section class="ban-options">
+    <section class="ban-options" formGroupName="checkboxes">
       <ul>
-        <li><mat-checkbox [(ngModel)]="data.checkboxes.banAllXboxes" (ngModelChange)="onChange()">Ban all Xboxes (No expiry)</mat-checkbox></li>
-        <li><mat-checkbox [(ngModel)]="data.checkboxes.banAllPCs" (ngModelChange)="onChange()">Ban all PCs (No expiry)</mat-checkbox></li>
-        <li><mat-checkbox [(ngModel)]="data.checkboxes.deleteLeaderboardEntries" (ngModelChange)="onChange()">Delete all leaderboard entries (Permanent)</mat-checkbox></li>
+        <li><mat-checkbox [formControl]="formControls.checkboxes.banAllXboxes">Ban all Xboxes (No expiry)</mat-checkbox></li>
+        <li><mat-checkbox [formControl]="formControls.checkboxes.banAllPCs">Ban all PCs (No expiry)</mat-checkbox></li>
+        <li><mat-checkbox [formControl]="formControls.checkboxes.deleteLeaderboardEntries">Delete all leaderboard entries (Permanent)</mat-checkbox></li>
       </ul>
     </section>
   </mat-card-content>
