--- a/StewardClient/src/app/pages/navbar-app/pages/user-banning/components/ban-options/ban-options.component.scss
+++ b/StewardClient/src/app/pages/navbar-app/pages/user-banning/components/ban-options/ban-options.component.scss
@@ -1,6 +1,6 @@
 @import '/src/variables.scss';
 
-mat-card-content {
+.wrapper {
   > *:not(:first-child) {
     display: block;
     padding-top: 30px;
