--- a/StewardClient/src/app/pages/navbar-app/pages/user-banning/pages/gravity/gravity-banning.component.html
+++ b/StewardClient/src/app/pages/navbar-app/pages/user-banning/pages/gravity/gravity-banning.component.html
@@ -1,8 +1,8 @@
 <gravity-player-selection
   [allowT10Id]="true"
   [allowGroup]="true"
-  [(playerIdentities)]="selectedPlayerIdentities"
-  (playerIdentitiesChange)="onPlayerIdentitiesChange($event)"
+  [(ngModel)]="selectedPlayerIdentities"
+  (ngModelChange)="onPlayerIdentitiesChange($event)"
 ></gravity-player-selection>
 
 <div class="action-container">
