--- a/StewardClient/src/app/pages/navbar-app/pages/user-banning/pages/apollo/apollo-banning.component.html
+++ b/StewardClient/src/app/pages/navbar-app/pages/user-banning/pages/apollo/apollo-banning.component.html
@@ -1,13 +1,16 @@
-<ng-container [formGroup]="formGroup" (ngSubmit)="submit">
+<ng-container [formGroup]="formGroup" (ngSubmit)="submit()">
   <apollo-player-selection
     [allowT10Id]="false"
     [allowGroup]="false"
-    [(playerIdentities)]="selectedPlayerIdentities"
-    (playerIdentitiesChange)="onPlayerIdentitiesChange($event)"
+    [formControl]="formControls.playerIdentities"
   ></apollo-player-selection>
 
   <div class="action-container">
-    <ban-options [formControl]="formControls.banOptions"></ban-options>
+    <mat-card>
+      <mat-card-content>
+        <ban-options [formControl]="formControls.banOptions"></ban-options>
+      </mat-card-content>
+    </mat-card>
 
     <mat-card>
       <mat-card-content>
