--- a/StewardClient/src/app/pages/navbar-app/pages/user-banning/pages/opus/opus-banning.component.html
+++ b/StewardClient/src/app/pages/navbar-app/pages/user-banning/pages/opus/opus-banning.component.html
@@ -1,8 +1,8 @@
 <opus-player-selection
   [allowT10Id]="false"
   [allowGroup]="false"
-  [(playerIdentities)]="selectedPlayerIdentities"
-  (playerIdentitiesChange)="onPlayerIdentitiesChange($event)"
+  [(ngModel)]="selectedPlayerIdentities"
+  (ngModelChange)="onPlayerIdentitiesChange($event)"
 ></opus-player-selection>
 
 <div class="action-container">
