--- a/StewardClient/src/app/pages/navbar-app/pages/user-banning/pages/opus/opus-banning.component.html
+++ b/StewardClient/src/app/pages/navbar-app/pages/user-banning/pages/opus/opus-banning.component.html
@@ -1,18 +1,23 @@
-<opus-player-selection
-  [allowT10Id]="false"
-  [allowGroup]="false"
-  [(ngModel)]="selectedPlayerIdentities"
-  (ngModelChange)="onPlayerIdentitiesChange($event)"
-></opus-player-selection>
+<ng-container [formGroup]="formGroup" (ngSubmit)="submit()">
+  <opus-player-selection
+    [allowT10Id]="false"
+    [allowGroup]="false"
+    [formControl]="formControls.playerIdentities"
+  ></opus-player-selection>
 
-<div class="action-container">
-  <ban-options></ban-options>
+  <div class="action-container">
+    <mat-card>
+      <mat-card-content>
+        <ban-options [formControl]="formControls.banOptions"></ban-options>
+      </mat-card-content>
+    </mat-card>
 
-  <mat-card>
-    <mat-card-content>
-      <verify-action-button #submitButton [alwaysShow]="true" [canSubmit]="true" [canSubmitDisabledReason]="'homk'">
-        Submit ban
-      </verify-action-button>
-    </mat-card-content>
-  </mat-card>
-</div>
+    <mat-card>
+      <mat-card-content>
+        <verify-action-button #submitButton [alwaysShow]="true" [canSubmit]="formGroup.valid" [canSubmitDisabledReason]="'Form is invalid'" checkboxText="Check to verify ban">
+          Submit ban
+        </verify-action-button>
+      </mat-card-content>
+    </mat-card>
+  </div>
+</ng-container>
