--- a/StewardClient/src/app/pages/navbar-app/components/player-selection/player-selection.component.scss
+++ b/StewardClient/src/app/pages/navbar-app/components/player-selection/player-selection.component.scss
@@ -1,6 +1,8 @@
 @import '/src/variables.scss';
 
 mat-card {
+  height: 400px;
+
   h2 {
     display: inline-block;
     margin: 0px;
@@ -17,11 +19,19 @@ mat-card {
     right: 20px;
   }
 
+  mat-button-toggle-group {
+    width: 100%;
+
+    > * {
+      width: 100%;
+    }
+  }
+
   .content-container,
   #results-view,
   #fail-state {
     display: block;
-    margin-top: 15px;
+    margin-top: 20px;
   }
 
   #groupDisabledError {
@@ -34,7 +44,7 @@ mat-card {
   }
 
   .player-id-input {
-    width: 300px;
+    width: 100%;
 
     mat-form-field {
       display: block;
@@ -51,40 +61,37 @@ mat-card {
     }
 
     .validate-btn {
+      margin-top: 10px;
       width: 100%;
     }
   }
 
   .identity-results {
-    max-height: 400px;
-    height: 100%;
-    min-width: 500px;
-    max-width: 500px;
-    overflow: auto;
+    max-height: 350px;
+    overflow-y: scroll;
 
-    table {
-      border-collapse: collapse;
-      width: 100%;
+    ::-webkit-scrollbar {
+      width: 2px;
+    }
 
-      th {
-        padding: 10px 0px;
-        min-width: 100px;
-      }
+    .validIdentity {
+      background-color: mat-color($app-primary);
+      color: #fff;
+    }
+  
+    .invalidIdentity {
+      background-color: mat-color($app-warn);
+      color: #fff;
+    }
 
-      tr {
-        border-top: 1px solid rgba(0, 0, 0, 0.12);
-        min-width: 30px;
-        text-align: center;
-        margin: auto;
-
-        button {
-          color: rgb(207, 26, 26);
-        }
-      }
-
-      .player-lookup-error {
-        background-color: rgb(228, 154, 154);
-      }
+    .remove-player-icon {
+      margin-left: 10px;
+      cursor: pointer;
     }
   }
+
+  .identity-results::-webkit-scrollbar {
+    width: 5px;
+  }
+
 }
