--- a/StewardClient/src/app/pages/navbar-app/pages/gifting/apollo/apollo-gifting.component.html
+++ b/StewardClient/src/app/pages/navbar-app/pages/gifting/apollo/apollo-gifting.component.html
@@ -1,12 +1,17 @@
 <ng-container>
-  <apollo-player-selection
-    [allowT10Id]="false"
-    [allowGroup]="false"
-    [(ngModel)]="selectedPlayerIdentities"
-    (ngModelChange)="onPlayerIdentitiesChange($event)"
-  ></apollo-player-selection>
+  <div class="left-side">
+    <apollo-player-selection
+      [allowT10Id]="false"
+      [allowGroup]="false"
+      [(ngModel)]="selectedPlayerIdentities"
+      (ngModelChange)="onPlayerIdentitiesChange($event)"
+    ></apollo-player-selection>
+  </div>
 
-  <br /><br />
-  <h2>Apollo gifting page state</h2>
-  <p>Number of identities: {{ selectedPlayerIdentities?.length }}</p>
+  <div class="action-container">
+    <mat-card>
+      <h2>Apollo gifting page state</h2>
+      <p>Number of identities: {{ selectedPlayerIdentities?.length }}</p>
+    </mat-card>
+  </div>
 </ng-container>
