--- a/StewardClient/src/app/pages/navbar-app/pages/user-banning/components/duration-picker/duration-picker.component.html
+++ b/StewardClient/src/app/pages/navbar-app/pages/user-banning/components/duration-picker/duration-picker.component.html
@@ -1,12 +1,12 @@
 <mat-form-field class="date-picker" appearance="fill">
   <mat-label>Ban End Date</mat-label>
-  <input matInput [matDatepicker]="datePicker" disabled>
+  <input matInput [matDatepicker]="datePicker" disabled />
   <mat-datepicker-toggle matSuffix [for]="datePicker"></mat-datepicker-toggle>
   <mat-datepicker #datePicker></mat-datepicker>
 </mat-form-field>
 
 <mat-button-toggle-group [formControl]="formControl">
-  <mat-button-toggle *ngFor="let option of options; let i=index" [value]="option.duration">
+  <mat-button-toggle *ngFor="let option of options; let i = index" [value]="option.duration">
     {{ option.humanized }}
   </mat-button-toggle>
 </mat-button-toggle-group>
