--- a/StewardClient/src/app/shared/components/verify-action-button/verify-action-button.component.html
+++ b/StewardClient/src/app/shared/components/verify-action-button/verify-action-button.component.html
@@ -7,7 +7,9 @@
   >
     <ng-content></ng-content>
   </button>
-  <mat-checkbox [(ngModel)]="verified" [disabled]="!canSubmit" [matTooltip]="activeTooltip">{{ checkboxText }}</mat-checkbox>
+  <mat-checkbox [(ngModel)]="verified" [disabled]="!canSubmit" [matTooltip]="activeTooltip">{{
+    checkboxText
+  }}</mat-checkbox>
 </span>
 <error-spinner
   [isActive]="isSubmitting"
