--- a/StewardClient/src/app/pages/navbar-app/components/player-selection/player-selection.component.scss
+++ b/StewardClient/src/app/pages/navbar-app/components/player-selection/player-selection.component.scss
@@ -69,9 +69,14 @@ mat-card {
   .identity-results {
     max-height: 350px;
     overflow-y: scroll;
+    margin-top: 20px;
 
     ::-webkit-scrollbar {
       width: 2px;
+    }
+
+    mat-chip {
+      cursor: pointer;
     }
 
     .validIdentity {
@@ -90,8 +95,34 @@ mat-card {
     }
   }
 
-  .identity-results::-webkit-scrollbar {
-    width: 5px;
+  .selected-player-information {
+    width: 100%;
+    display: block;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    height: 200px;
+    border-top: 2px solid rgb(218, 218, 218);
+
+    .selected-player-information-content {
+      padding: 30px;
+      margin-right: 30px;
+
+      p {
+        margin-bottom: 5px;
+      }
+
+      fa-icon {
+        color: mat-color($app-primary);
+      }
+    }
+
+    .close-player-info-button {
+      position: absolute;
+      top: 10px;
+      right: 10px;
+      display: block;
+    }
   }
 
 }
