fix build issues

--- a/StewardClient/src/app/pages/navbar-app/pages/gifting/gravity/gravity-gifting.component.html
+++ b/StewardClient/src/app/pages/navbar-app/pages/gifting/gravity/gravity-gifting.component.html
@@ -3,7 +3,7 @@
     <gravity-player-selection
       [(ngModel)]="selectedPlayerIdentities"
       (ngModelChange)="onPlayerIdentitiesChange($event)"
-      [playerIdentitySelectedEvent]="playerIdentitySelected($event)"
+      (playerIdentitySelectedEvent)="playerIdentitySelected($event)"
     ></gravity-player-selection>
   </div>
 
