--- a/StewardClient/src/app/pages/navbar-app/pages/gifting/sunrise/sunrise-gifting.component.html
+++ b/StewardClient/src/app/pages/navbar-app/pages/gifting/sunrise/sunrise-gifting.component.html
@@ -4,7 +4,7 @@
       [allowT10Id]="false"
       [(ngModel)]="selectedPlayerIdentities"
       (ngModelChange)="onPlayerIdentitiesChange($event)"
-      [playerIdentitySelectedEvent]="playerIdentitySelected($event)"
+      (playerIdentitySelectedEvent)="playerIdentitySelected($event)"
     ></sunrise-player-selection>
   </div>
 
