--- a/StewardClient/src/app/pages/navbar-app/pages/gifting/apollo/apollo-gifting.component.html
+++ b/StewardClient/src/app/pages/navbar-app/pages/gifting/apollo/apollo-gifting.component.html
@@ -5,6 +5,7 @@
       [allowGroup]="false"
       [(ngModel)]="selectedPlayerIdentities"
       (ngModelChange)="onPlayerIdentitiesChange($event)"
+      (playerIdentitySelectedEvent)="playerIdentitySelected($event)"
     ></apollo-player-selection>
   </div>
 
