--- a/StewardClient/src/app/pages/navbar-app/components/player-selection/player-selection.component.scss
+++ b/StewardClient/src/app/pages/navbar-app/components/player-selection/player-selection.component.scss
@@ -103,6 +103,7 @@ mat-card {
     left: 0;
     height: 200px;
     border-top: 2px solid rgb(218, 218, 218);
+    background-color: #fff;
 
     .selected-player-information-content {
       padding: 30px;
