--- a/StewardClient/src/app/pages/navbar-app/pages/gifting/sunrise/sunrise-gifting.component.html
+++ b/StewardClient/src/app/pages/navbar-app/pages/gifting/sunrise/sunrise-gifting.component.html
@@ -1,17 +1,17 @@
-<ng-container>
-  <div class="left-side">
-    <sunrise-player-selection
-      [allowT10Id]="false"
-      [(ngModel)]="selectedPlayerIdentities"
-      (ngModelChange)="onPlayerIdentitiesChange($event)"
-      (playerIdentitySelectedEvent)="playerIdentitySelected($event)"
-    ></sunrise-player-selection>
-  </div>
+<div class="left-side">
+  <sunrise-player-selection
+    [allowGroup]="true"
+    [allowT10Id]="false"
+    [allowGroup]="true"
+    [(ngModel)]="selectedPlayerIdentities"
+    (ngModelChange)="onPlayerIdentitiesChange($event)"
+    (playerIdentitySelectedEvent)="playerIdentitySelected($event)"
+  ></sunrise-player-selection>
+</div>
 
-  <div class="action-container">
-    <mat-card>
-      <h2>Sunrise gifting page state</h2>
-      <p>Number of identities: {{ selectedPlayerIdentities?.length }}</p>
-    </mat-card>
-  </div>
-</ng-container>
+<div class="action-container">
+  <mat-card>
+    <h2>Sunrise gifting page state</h2>
+    <p>Number of identities: {{ selectedPlayerIdentities?.length }}</p>
+  </mat-card>
+</div>
