lsp group card is built and outputting to gifting page

--- a/StewardClient/src/app/pages/navbar-app/pages/gifting/apollo/apollo-gifting.component.html
+++ b/StewardClient/src/app/pages/navbar-app/pages/gifting/apollo/apollo-gifting.component.html
@@ -6,6 +6,7 @@
     (ngModelChange)="onPlayerIdentitiesChange($event)"
     (playerIdentitySelectedEvent)="playerIdentitySelected($event)"
   ></apollo-player-selection>
+  <apollo-lsp-group-selection></apollo-lsp-group-selection>
 </div>
 
 <div class="action-container">
