--- a/StewardClient/src/app/pages/navbar-app/components/lsp-group-selection/lsp-group-selection.component.scss
+++ b/StewardClient/src/app/pages/navbar-app/components/lsp-group-selection/lsp-group-selection.component.scss
@@ -1,1 +1,22 @@
 @import '/src/variables.scss';
+
+
+mat-card {
+  height: 200px;
+
+  mat-form-field {
+    max-width: 300px;
+    width: 100%;
+  }
+
+  .clear-selection-button {
+    position: relative;
+    top: -0.4em;
+    left: 1em;
+    display: inline-block;
+  
+    fa-icon {
+      color: #fff;
+    }
+  }
+}
